--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/estilo.css">
-    <script src="/pages/menu.js"></script>
+    <link rel="stylesheet" href="./pages/estilo.css">
+    <script src="./pages/menu.js"></script>
     <title>Moroni Automotores</title>
 </head>
 <body>
@@ -17,13 +17,13 @@
                 <ul class="boton"> <a href="">Conocenos</a> </ul>
             </li>
             <div class="logo">
-                <img src="/imagenes/Logo Moroni.jpg" alt="Logo">
+                <img src="./imagenes/Logo Moroni.jpg" alt="Logo">
             </div>
         </nav>
     </header>
     <main>
         <div class="portada">
-            <img src="/imagenes/Foto9ortada.jpg" alt="portada">
+            <img src="./imagenes/Foto9ortada.jpg" alt="portada">
         </div>
     </main>
     <section>
