--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/estilo.css">
-    <script src="./pages/menu.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,100;1,200;1,300;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6bc05f2ef0.js" crossorigin="anonymous"></script>
+    <script defer src="./pages/menu.js"></script>
     <script src="./pages/class.js"></script>
     <title>Moroni Automotores</title>
 </head>
@@ -29,78 +33,28 @@
     </main>
     <section>
         <h2>Listado de Vehículos disponibles</h2>
-        <div class="autos">
-            <article class="card">
-                <div>
-                    <img src="./imagenes/192-OROCH2019.png" alt="oroch">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Renault Oroch</span>
-                    <span class="card_subtitle">Modelo 2019</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
-
-            <article class="card">
-                <div>
-                    <img src="./imagenes/194-308LLURE2015.png" alt="308">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Peugeot 308</span>
-                    <span class="card_subtitle">Modelo 2015</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
-
-            <article class="card">
-                <div>
-                    <img src="./imagenes/196-CLSSIC2013.png" alt="Clio">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Renault Clio Classic</span>
-                    <span class="card_subtitle">Modelo 2013</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
-
-            <article class="card">
-                <div>
-                    <img src="./imagenes/FordKA.jpg" alt="FordKA">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Ford Ka</span>
-                    <span class="card_subtitle">Modelo 2012</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
-
-            <article class="card">
-                <div>
-                    <img src="./imagenes/Logan.jpg" alt="Logan">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Renault Logan</span>
-                    <span class="card_subtitle">Modelo 2016</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
-
-            <article class="card">
-                <div>
-                    <img src="./imagenes/Peugeot307.jpg" alt="307">
-                </div>
-            <div class="card_content">
-                <span class="card_title">Peugeot 307</span>
-                    <span class="card_subtitle">Modelo 2009</span>
-                    <p class="card_description">Lorem ipsum dolor</p>
-            </div>
-            </article>
+        <div class="autos"></div>
+    </section>
+    <section class="mapas">
+        <h2>Acercate a nuestras consecionarias</h2>
+        <div class="google">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2388.0925715574635!2d-64.13041307104223!3d-32.16991486872017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd6fa5184750f1%3A0x17afcd78e07f5fa6!2sMoroni%20Automotores!5e0!3m2!1ses!2sar!4v1680360852112!5m2!1ses!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3377.2693075611774!2d-64.15752298523314!3d-32.170011840324555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd677d0b6b829f%3A0x125806763f603801!2sMoroni%20Automotores%202!5e0!3m2!1ses!2sar!4v1680360952293!5m2!1ses!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
-    
-    <div class="alumno">
-        <p>Alumno: Mauricio Nicolás Maldonado</p>
-        <p>Comisión JavaScript: 39470</p>
-    </div>
+    <footer>
+        <div class="redes">
+            <h3>Comunicate con nosotros</h3>
+            <ul>
+                <li><a href="https://www.instagram.com/moroni_automotores/" target="_blank"><i class="fa-brands fa-instagram fa-bounce" style="color: #eeeff2;"></i></a></li>
+                <li><a href="https://www.facebook.com/moroniautomotores" target="_blank"><i class="fa-brands fa-square-facebook fa-fade" style="color: #f0f2f4;"></i></a> </li>
+                <li><i class="fa-brands fa-whatsapp fa-spin" style="color: #f2f2f2;"></i></li>
+            </ul>
+        </div>
+        <div id="logo-footer">
+            <img src="./imagenes/footer.png" alt="footer">
+        </div>
+    </footer>
+
 </body>
 </html>
