--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <script src="https://kit.fontawesome.com/6bc05f2ef0.js" crossorigin="anonymous"></script>
     <script defer src="./pages/menu.js"></script>
     <script src="./pages/class.js"></script>
+    <script defer src="./pages/info.js"></script>
     <title>Moroni Automotores</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <li>
-                <ul class="boton"> <a href="">Inicio</a> </ul>
-                <ul class="boton"> <a href="">Autos</a> </ul>
+                <ul class="boton"> <a href="#">Inicio</a> </ul>
+                <ul class="boton"> <a href="./pages/info.html">información</a> </ul>
                 <ul class="boton"> <a href="">Conocenos</a> </ul>
             </li>
             <div class="logo">
@@ -33,7 +34,7 @@
     </main>
     <section>
         <h2>Listado de Vehículos disponibles</h2>
-        <div class="autos"></div>
+        <div class="autos"><!--aca van las cards generadas en js--></div>
     </section>
     <section class="mapas">
         <h2>Acercate a nuestras consecionarias</h2>
