--- a/info.html
+++ b/info.html
@@ -9,25 +9,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,100;1,200;1,300;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6bc05f2ef0.js" crossorigin="anonymous"></script>
-    <script defer src="./info.js"></script>
-    <script src="../pages/menu.js"></script>
-    <script src="../pages/class.js"></script>
+    <script src="pages/base.js"></script>
+    <script defer src="pages/info.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>Mas información</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <li>
-                <ul class="boton"> <a href="../index.html">Inicio</a> </ul>
-                <ul class="boton"> <a href="./info.html">Autos</a> </ul>
-                <ul class="boton"> <a href="">Conocenos</a> </ul>
+                <ul class="boton"> <a href="index.html">Inicio</a> </ul>
             </li>
             <div class="logo">
-                <img src="../imagenes/Logo Moroni.jpg" alt="Logo">
+                <img src="./imagenes/Logo Moroni.jpg" alt="Logo">
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main_catalogo">
     <div class="catalogo">
         <!--aca se generan las cards de mas informacion-->
     </div>
