--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
             </ul>
         </div>
         <div id="logo-footer">
-            <img src="../imagenes/footer.png" alt="footer">
+            <img src="./imagenes/footer.png" alt="footer">
         </div>
     </footer>
 </body>
